# call-me-maybe

./: .gitignore  Makefile  README.md  RELATORIO_PROBLEMAS_SAIDA_JSON.md  __main__.py  aux-doc.md  pyproject.toml  schemas.py
src/: __main__.py  engine.py  parser.py  schemas.py
tests/: test_cleaning.py
