[project]
name = "call_me_maybe"
version = "0.1.0"
description = "A function calling tool"
requires-python = ">=3.10"
dependencies = [
    "colorama>=0.4.6",
    "fire>=0.7.1",
    "hf-transfer>=0.1.9",
    "llm-sdk",
    "numpy",
    "pydantic",
]

[project.optional-dependencies]
dev = [
    "flake8>=6.0.0",
    "mypy>=1.5.0",
]

[tool.uv.workspace]
members = ["llm_sdk"]

[tool.uv.sources]
llm-sdk = { workspace = true }
